--- a/OldiOSExperience/wwwroot/index.html
+++ b/OldiOSExperience/wwwroot/index.html
@@ -30,6 +30,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/app-animations.js"></script>
     <script>
         window.getElementWidth = (element) => {
             return element.getBoundingClientRect().width;
