--- a/OldiOSExperience/wwwroot/index.html
+++ b/OldiOSExperience/wwwroot/index.html
@@ -31,6 +31,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/app-animations.js"></script>
+    <script src="js/utils.js"></script>
     <script>
         window.getElementWidth = (element) => {
             return element.getBoundingClientRect().width;
