--- a/OldiOSExperience/wwwroot/index.html
+++ b/OldiOSExperience/wwwroot/index.html
@@ -32,6 +32,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/app-animations.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/battery.js"></script>
     <script>
         window.getElementWidth = (element) => {
             return element.getBoundingClientRect().width;
