--- a/OldiOS/OldiOS.Web/wwwroot/index.html
+++ b/OldiOS/OldiOS.Web/wwwroot/index.html
@@ -9,8 +9,10 @@
     <meta http-equiv="Expires" content="0" />
     <title>OldiOS Experience</title>
     <base href="/" />
+    <link rel="preload" id="webassembly" />
     <link rel="stylesheet" href="_content/OldiOS.Shared/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="_content/OldiOS.Shared/css/app.css" />
+    <link href="OldiOS.Web.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="_content/OldiOS.Shared/favicon.png" />
 </head>
 
